--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
-# Object file
-*.o
+target/
+!.mvn/wrapper/maven-wrapper.jar
 
-# Ada Library Information
-*.ali
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
